package Programming.lab3.src;

public enum Mood {
    SLEEPY,
    AWAKE,
    CREATIVE
}
